[gd_scene load_steps=3 format=3 uid="uid://cmh51pkbidwok"]

[ext_resource type="Script" uid="uid://dnyvdmhxjx0dv" path="res://scenes/Menu/raw_solution_runner.gd" id="1_so54k"]
[ext_resource type="PackedScene" uid="uid://dqcf05u4d7r5b" path="res://scenes/Menu/raw_solution_part_solver.tscn" id="2_rwcm5"]

[node name="RawSolutionRunner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_so54k")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="RawSolutionPartSolver" parent="HBoxContainer" instance=ExtResource("2_rwcm5")]
layout_mode = 2

[node name="RawSolutionPartSolver2" parent="HBoxContainer" instance=ExtResource("2_rwcm5")]
layout_mode = 2
